force-app/main/default/objects/ssot__MemberBenefit__dlm/fields/ssot__LoyaltyBenefitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LoyaltyBenefitId__c</fullName>
    <label>Loyalty Benefit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LoyaltyBenefitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>