force-app/main/default/objects/ssot__MemberBenefit__dlm/fields/ssot__rel_1697761179361_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761179361_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LoyaltyBenefit_Id_map_MemberBenefit__rel</label>
    <referenceTo>ssot__LoyaltyBenefit__dlm</referenceTo>
    <relationshipLabel>LoyaltyBenefit_Id_map_MemberBenefit__rel</relationshipLabel>
    <relationshipName>rel_1697761179361_end</relationshipName>
    <type>Lookup</type>
</CustomField>