force-app/main/default/objects/ssot__MemberBenefit__dlm/fields/ssot__rel_1697761189387_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761189387_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MemberBenefit_LoyaltyBenefitId_map_L_rel</label>
    <referenceTo>ssot__LoyaltyBenefit__dlm</referenceTo>
    <relationshipLabel>MemberBenefit_LoyaltyBenefitId_map_L_rel</relationshipLabel>
    <relationshipName>rel_1697761189387_end</relationshipName>
    <type>Lookup</type>
</CustomField>